<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- 首页 -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <!-- 饮食日记 -->
    <item
        android:id="@+id/nav_diary"
        android:icon="@drawable/ic_diary"
        android:title="@string/nav_diary" />
    
    <!-- 健康分析 -->
    <item
        android:id="@+id/nav_analysis"
        android:icon="@drawable/ic_analysis"
        android:title="@string/nav_analysis" />
    
    <!-- AI对话 -->
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat" />
    
    <!-- 个人中心 -->
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
    
</menu>
